Adjusting label text

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -4,7 +4,7 @@
 	id: 'linkExpirationTime',
 	name: 'linkExpirationTime',
 	value: settings['linkExpirationTime'],
-	label: 'Magic Link Expiration Time (in minutes)',
+	label: 'Magic Login Expiration Time (in minutes)',
 	size: 10
 })}}
 
